--- a/02_CNN_Introduction.ipynb
+++ b/02_CNN_Introduction.ipynb
@@ -2,6 +2,7 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "name": "02_CNN_Introduction.ipynb",
       "provenance": [],
@@ -10,10 +11,9 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+      "display_name": "Python 3",
+      "name": "python3"
+    }
   },
   "cells": [
     {
@@ -107,10 +107,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ez90vQEksR9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ez90vQEksR9b",
         "outputId": "7d234cf8-89b3-47b4-d2af-5f24ce22cd00"
       },
       "source": [
@@ -176,10 +176,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X7Z5G2O00Etd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "X7Z5G2O00Etd",
         "outputId": "8becfaa7-c04c-47b9-a0d0-b21531197025"
       },
       "source": [
@@ -237,10 +237,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y8GjztiH0hnw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Y8GjztiH0hnw",
         "outputId": "5cc501ec-2071-4430-9760-ba9f99e7b6db"
       },
       "source": [
@@ -305,10 +305,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nqiEwpdROxga",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "nqiEwpdROxga",
         "outputId": "05f02226-48b5-41fd-f1b0-c1e50db62341"
       },
       "source": [
@@ -393,10 +393,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lp1HH0VOqN0N",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "lp1HH0VOqN0N",
         "outputId": "1884817f-59b6-41f8-8889-474d9d865180"
       },
       "source": [
@@ -482,10 +482,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HzoTGOwDmQm4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "HzoTGOwDmQm4",
         "outputId": "6a6bfeb3-3c9e-4947-a090-df10a5c5e662"
       },
       "source": [
@@ -542,10 +542,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3t0Wq9ArL4EZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "3t0Wq9ArL4EZ",
         "outputId": "1582160c-6388-4593-85cd-d3bf783848f8"
       },
       "source": [
@@ -657,10 +657,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UD4NZtIxOTbY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "UD4NZtIxOTbY",
         "outputId": "8c71a1c7-4985-4736-ca09-45e6bd66aa9e"
       },
       "source": [
@@ -714,10 +714,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BmeolsG_Pi8A",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "BmeolsG_Pi8A",
         "outputId": "5590d4d1-4572-4d5e-cdaf-ed4ef961db56"
       },
       "source": [
@@ -769,12 +769,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zKWvv0VwZPH3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 358
+          "height": 356
         },
-        "outputId": "d1a956f5-3687-46c1-febc-55c56d6c61f3"
+        "id": "zKWvv0VwZPH3",
+        "outputId": "451ddcd8-278d-45f7-c265-fad2478865c2"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -816,7 +816,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 3s 0us/step\n",
+            "170500096/170498071 [==============================] - 2s 0us/step\n",
             "Image shape: (32, 32, 3)\n",
             "Total number of training samples: 50000\n",
             "Total number of test samples: 10000\n"
@@ -849,10 +849,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bFurVCqpclnm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "bFurVCqpclnm",
         "outputId": "77b21fdf-e609-4a0f-c7a4-ba6e66777a96"
       },
       "source": [
@@ -898,10 +898,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KEZW-1pxbKlC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "KEZW-1pxbKlC",
         "outputId": "15639a32-d65d-4aa9-ebe7-82ea9d937c72"
       },
       "source": [
@@ -999,7 +999,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r8ATD38dDM1q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r8ATD38dDM1q",
+        "outputId": "66d78171-5800-4933-ab23-507bed63075a"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -1035,7 +1039,38 @@
         "\n",
         "\n",
         "# Define here your architecture\n",
+        "# model = Sequential()\n",
+        "# model.add(Conv2D(16, (3,3), padding='valid', input_shape=x_train.shape[1:]))\n",
+        "# model.add(Activation('relu'))\n",
+        "# model.add(Conv2D(16, (3,3), padding='valid'))\n",
+        "# # model.add(Activation('relu'))\n",
+        "# model.add(Flatten())\n",
+        "# model.add(Dense(10))\n",
+        "# model.add(Activation('sigmoid'))\n",
         "\n",
+        "# model = Sequential()\n",
+        "\n",
+        "# model.add(Flatten())\n",
+        "\n",
+        "# model.add(Dense(32, activation='relu', input_shape=(x_train.shape[1:])))\n",
+        "# model.add(Dense(64, activation='relu'))\n",
+        "# model.add(Dense(128, activation='relu'))\n",
+        "# model.add(Dense(256, activation='relu'))\n",
+        "# model.add(Dense(512, activation='relu'))\n",
+        "# model.add(Dense(10, activation='softmax'))\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Conv2D(16, (3,3), padding='same', input_shape=x_train.shape[1:]))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
+        "model.add(Conv2D(16, (3,3), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "# model.add(Conv2D(16, (7,7), padding='same'))\n",
+        "# model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(10))\n",
+        "model.add(Activation('softmax'))\n",
         "\n",
         "# . . . \n",
         "\n",
@@ -1051,8 +1086,60 @@
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Image shape: (32, 32, 3)\n",
+            "Total number of training samples: 50000\n",
+            "Total number of test samples: 10000\n",
+            "Epoch 1/20\n",
+            "1563/1563 [==============================] - 6s 3ms/step - loss: 1.9151 - accuracy: 0.3188\n",
+            "Epoch 2/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.5172 - accuracy: 0.4702\n",
+            "Epoch 3/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.3788 - accuracy: 0.5213\n",
+            "Epoch 4/20\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 1.2706 - accuracy: 0.5591\n",
+            "Epoch 5/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.2233 - accuracy: 0.5787\n",
+            "Epoch 6/20\n",
+            "1563/1563 [==============================] - 5s 4ms/step - loss: 1.1787 - accuracy: 0.5910\n",
+            "Epoch 7/20\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 1.1372 - accuracy: 0.6078\n",
+            "Epoch 8/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.1251 - accuracy: 0.6119\n",
+            "Epoch 9/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0992 - accuracy: 0.6215\n",
+            "Epoch 10/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0786 - accuracy: 0.6267\n",
+            "Epoch 11/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0582 - accuracy: 0.6344\n",
+            "Epoch 12/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0383 - accuracy: 0.6470\n",
+            "Epoch 13/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0210 - accuracy: 0.6533\n",
+            "Epoch 14/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0095 - accuracy: 0.6563\n",
+            "Epoch 15/20\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9919 - accuracy: 0.6614\n",
+            "Epoch 16/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9874 - accuracy: 0.6605\n",
+            "Epoch 17/20\n",
+            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9782 - accuracy: 0.6659\n",
+            "Epoch 18/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9616 - accuracy: 0.6683\n",
+            "Epoch 19/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9495 - accuracy: 0.6746\n",
+            "Epoch 20/20\n",
+            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9433 - accuracy: 0.6788\n",
+            "Test loss: 1.0876997709274292\n",
+            "Test accuracy: 0.6261000037193298\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1095,11 +1182,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71urud9ZHq9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
+        "id": "71urud9ZHq9d",
         "outputId": "9c7c3b61-b346-4eda-fb75-d7b8d7cff831"
       },
       "source": [
@@ -1172,10 +1259,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FORNJ1QU2L-t",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "FORNJ1QU2L-t",
         "outputId": "833c61ef-51f2-407c-c03c-bdb26cee6a47"
       },
       "source": [
@@ -1302,6 +1389,29 @@
         "*   Propose a CNN architecture that has an estimation error in the validation set below 75%. \n",
         "*   Present a figure showing the training and validation loss vs the number of training iterations for different architectural design choices. Discuss the gap between the training and validation loss depending on the proposed architecture.\n",
         "*   Report a table with results when using any of the other images from the house (kitchen, bedroom, and bathroom)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "46Y8f2T538Xg",
+        "outputId": "ce41b847-deb7-4839-ff31-b8652d64293f"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
