--- a/02_CNN_Introduction.ipynb
+++ b/02_CNN_Introduction.ipynb
@@ -1003,7 +1003,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r8ATD38dDM1q",
-        "outputId": "66d78171-5800-4933-ab23-507bed63075a"
+        "outputId": "d7f2d923-0975-4d04-a422-d687585b4c1d"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -1060,17 +1060,22 @@
         "# model.add(Dense(10, activation='softmax'))\n",
         "\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(16, (3,3), padding='same', input_shape=x_train.shape[1:]))\n",
+        "model.add(Conv2D(128, (3,3), padding='same', input_shape=x_train.shape[1:]))\n",
         "model.add(Activation('relu'))\n",
-        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
-        "model.add(Conv2D(16, (3,3), padding='same'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
+        "model.add(Conv2D(64, (5,5), padding='same'))\n",
         "model.add(Activation('relu'))\n",
-        "# model.add(Conv2D(16, (7,7), padding='same'))\n",
-        "# model.add(Activation('relu'))\n",
-        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='valid'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
+        "model.add(Conv2D(32, (7,7), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
         "model.add(Flatten())\n",
+        "# model.add(Dense(128, activation='relu'))\n",
+        "# model.add(Dense(32, activation='relu'))\n",
+        "# model.add(Dense(256, activation='relu'))\n",
+        "# model.add(Dense(512, activation='relu'))\n",
         "model.add(Dense(10))\n",
-        "model.add(Activation('softmax'))\n",
+        "model.add(Activation('sigmoid'))\n",
         "\n",
         "# . . . \n",
         "\n",
@@ -1086,7 +1091,7 @@
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 64,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,47 +1100,47 @@
             "Total number of training samples: 50000\n",
             "Total number of test samples: 10000\n",
             "Epoch 1/20\n",
-            "1563/1563 [==============================] - 6s 3ms/step - loss: 1.9151 - accuracy: 0.3188\n",
+            "1563/1563 [==============================] - 22s 12ms/step - loss: 1.6921 - accuracy: 0.3917\n",
             "Epoch 2/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.5172 - accuracy: 0.4702\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 1.1243 - accuracy: 0.6071\n",
             "Epoch 3/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.3788 - accuracy: 0.5213\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.9539 - accuracy: 0.6708\n",
             "Epoch 4/20\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 1.2706 - accuracy: 0.5591\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.8530 - accuracy: 0.7073\n",
             "Epoch 5/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.2233 - accuracy: 0.5787\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.7725 - accuracy: 0.7321\n",
             "Epoch 6/20\n",
-            "1563/1563 [==============================] - 5s 4ms/step - loss: 1.1787 - accuracy: 0.5910\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.7117 - accuracy: 0.7570\n",
             "Epoch 7/20\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 1.1372 - accuracy: 0.6078\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.6658 - accuracy: 0.7736\n",
             "Epoch 8/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.1251 - accuracy: 0.6119\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.6290 - accuracy: 0.7849\n",
             "Epoch 9/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0992 - accuracy: 0.6215\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.5975 - accuracy: 0.7955\n",
             "Epoch 10/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0786 - accuracy: 0.6267\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.5733 - accuracy: 0.8040\n",
             "Epoch 11/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0582 - accuracy: 0.6344\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.5342 - accuracy: 0.8207\n",
             "Epoch 12/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0383 - accuracy: 0.6470\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.5217 - accuracy: 0.8228\n",
             "Epoch 13/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0210 - accuracy: 0.6533\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.4960 - accuracy: 0.8304\n",
             "Epoch 14/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 1.0095 - accuracy: 0.6563\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.4650 - accuracy: 0.8416\n",
             "Epoch 15/20\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9919 - accuracy: 0.6614\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.4363 - accuracy: 0.8504\n",
             "Epoch 16/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9874 - accuracy: 0.6605\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.4202 - accuracy: 0.8555\n",
             "Epoch 17/20\n",
-            "1563/1563 [==============================] - 6s 4ms/step - loss: 0.9782 - accuracy: 0.6659\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.4041 - accuracy: 0.8618\n",
             "Epoch 18/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9616 - accuracy: 0.6683\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.3884 - accuracy: 0.8673\n",
             "Epoch 19/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9495 - accuracy: 0.6746\n",
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.3622 - accuracy: 0.8773\n",
             "Epoch 20/20\n",
-            "1563/1563 [==============================] - 5s 3ms/step - loss: 0.9433 - accuracy: 0.6788\n",
-            "Test loss: 1.0876997709274292\n",
-            "Test accuracy: 0.6261000037193298\n"
+            "1563/1563 [==============================] - 19s 12ms/step - loss: 0.3510 - accuracy: 0.8820\n",
+            "Test loss: 0.8392719626426697\n",
+            "Test accuracy: 0.7541000247001648\n"
           ],
           "name": "stdout"
         }
@@ -1161,14 +1166,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ibukle2ODMEp"
+        "id": "Ibukle2ODMEp",
+        "outputId": "f2be31e0-f016-46ac-b61c-a00c47f9bd7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!git clone https://github.com/emanhamed/Houses-dataset\n",
         "%cd /content/Houses-dataset/Houses\\ Dataset"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: destination path 'Houses-dataset' already exists and is not an empty directory.\n",
+            "/content/Houses-dataset/Houses Dataset\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1187,7 +1205,7 @@
           "height": 286
         },
         "id": "71urud9ZHq9d",
-        "outputId": "9c7c3b61-b346-4eda-fb75-d7b8d7cff831"
+        "outputId": "4cc5ab8d-fc90-412b-ddd7-689cd606b712"
       },
       "source": [
         "import cv2\n",
@@ -1224,7 +1242,7 @@
         "    axes[row,col].set_xticks([])\n",
         "    axes[row,col].set_yticks([])"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1263,7 +1281,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FORNJ1QU2L-t",
-        "outputId": "833c61ef-51f2-407c-c03c-bdb26cee6a47"
+        "outputId": "833730d3-3c9b-4cda-9c25-058c8331651c"
       },
       "source": [
         "seed(1234)\n",
@@ -1291,7 +1309,7 @@
         "print('Y_train labels shape: {0}'.format(Y_train.shape))\n",
         "print('Y_val labels shape: {0}'.format(Y_val.shape))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1319,7 +1337,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YE8g42x3M2Ko"
+        "id": "YE8g42x3M2Ko",
+        "outputId": "edafad93-e2db-4450-8791-0b17ef72e64a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -1335,7 +1357,22 @@
         "model = Sequential()\n",
         "\n",
         "# . . . \n",
-        "\n",
+        "model.add(Conv2D(128, (3,3), padding='same', input_shape=X_train.shape[1:]))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
+        "model.add(Conv2D(64, (5,5), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
+        "model.add(Conv2D(32, (7,7), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), strides=(1, 1), padding='same'))\n",
+        "model.add(Flatten())\n",
+        "# model.add(Dense(128, activation='relu'))\n",
+        "# model.add(Dense(32, activation='relu'))\n",
+        "# model.add(Dense(256, activation='relu'))\n",
+        "# model.add(Dense(512, activation='relu'))\n",
+        "model.add(Dense(1))\n",
+        "model.add(Activation('linear'))\n",
         "\n",
         "# Define here your architecture\n",
         "\n",
@@ -1348,10 +1385,72 @@
         "\n",
         "# train the model\n",
         "print(\"[INFO] training model...\")\n",
-        "model.fit(X_train, Y_train, validation_data=(X_val, Y_val), epochs=100, batch_size=32)"
+        "model.fit(X_train, Y_train, validation_data=(X_val, Y_val), epochs=5, batch_size=32)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_14\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_42 (Conv2D)           (None, 64, 64, 128)       3584      \n",
+            "_________________________________________________________________\n",
+            "activation_56 (Activation)   (None, 64, 64, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_42 (MaxPooling (None, 64, 64, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_43 (Conv2D)           (None, 64, 64, 64)        204864    \n",
+            "_________________________________________________________________\n",
+            "activation_57 (Activation)   (None, 64, 64, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_43 (MaxPooling (None, 64, 64, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_44 (Conv2D)           (None, 64, 64, 32)        100384    \n",
+            "_________________________________________________________________\n",
+            "activation_58 (Activation)   (None, 64, 64, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d_44 (MaxPooling (None, 64, 64, 32)        0         \n",
+            "_________________________________________________________________\n",
+            "flatten_14 (Flatten)         (None, 131072)            0         \n",
+            "_________________________________________________________________\n",
+            "dense_14 (Dense)             (None, 1)                 131073    \n",
+            "_________________________________________________________________\n",
+            "activation_59 (Activation)   (None, 1)                 0         \n",
+            "=================================================================\n",
+            "Total params: 439,905\n",
+            "Trainable params: 439,905\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "[INFO] training model...\n",
+            "Epoch 1/5\n",
+            "14/14 [==============================] - 1s 59ms/step - loss: 5604.4098 - mean_absolute_percentage_error: 5604.4098 - val_loss: 71.6881 - val_mean_absolute_percentage_error: 71.6881\n",
+            "Epoch 2/5\n",
+            "14/14 [==============================] - 1s 44ms/step - loss: 71.7227 - mean_absolute_percentage_error: 71.7227 - val_loss: 78.6789 - val_mean_absolute_percentage_error: 78.6789\n",
+            "Epoch 3/5\n",
+            "14/14 [==============================] - 1s 45ms/step - loss: 75.2636 - mean_absolute_percentage_error: 75.2636 - val_loss: 74.4334 - val_mean_absolute_percentage_error: 74.4334\n",
+            "Epoch 4/5\n",
+            "14/14 [==============================] - 1s 44ms/step - loss: 76.6535 - mean_absolute_percentage_error: 76.6535 - val_loss: 67.6598 - val_mean_absolute_percentage_error: 67.6598\n",
+            "Epoch 5/5\n",
+            "14/14 [==============================] - 1s 45ms/step - loss: 74.7553 - mean_absolute_percentage_error: 74.7553 - val_loss: 69.6651 - val_mean_absolute_percentage_error: 69.6651\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f82bc2a4860>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1365,7 +1464,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u2u2qQh90C3K"
+        "id": "ONzpi01kCa7i"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u2u2qQh90C3K",
+        "outputId": "48541597-f293-4ebf-f453-78756ae5d6c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "prices_predicted = model.predict(X_val).flatten()\n",
@@ -1374,8 +1488,16 @@
         "\n",
         "print(\"Predicting house prices - Estimation Error: {:.2f}%\".format(error_mean))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Predicting house prices - Estimation Error: 54.54%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1403,7 +1525,7 @@
       "source": [
         ""
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
